I've refactored agents and tests, and fixed most compilation errors.
This commit addresses widespread compilation errors throughout your project.

Here are the changes I made:

1.  **Agent Interface Alignment:**
    *   I ensured `Agent.java` includes `String act(String userQuery)`.
    *   I ensured `JaiderAiService.java` includes `String chat(String userMessage)`.

2.  **Agent Implementation Refactoring:**
    *   I modified `AskAgent.java`, `CoderAgent.java`, and `ArchitectAgent.java` to use `this.ai.chat(userQuery)` for LLM interactions, centralizing this logic.
    *   I added constructors to these agents that accept a `JaiderAiService` instance, allowing for easier mocking and testing.
    *   I also updated `AbstractAgent` with a constructor to support `JaiderAiService` injection.

3.  **Agent Test Refactoring:**
    *   I updated `AskAgentTest.java`, `CoderAgentTest.java`, and `ArchitectAgentTest.java` to use the new testing constructors, injecting mocked `JaiderAiService` instances.
    *   I changed tests to mock and verify calls on the `JaiderAiService` mock (e.g., `ai.chat()`) instead of the lower-level `ChatLanguageModel.generate()`.
    *   I resolved various compilation issues in these tests related to:
        *   Incorrect tool configuration/assertions.
        *   References to removed `SYSTEM_MESSAGE` constants.
        *   Syntax errors (e.g., duplicate package declarations).
        *   Missing imports.
    *   As a result, `AskAgentTest.java`, `CoderAgentTest.java`, and `ArchitectAgentTest.java` now compile successfully.

4.  **Main Codebase Compilation:**
    *   The entire main codebase (`src/main/java`) now compiles successfully.

Remaining Issues & Why I'm Stuck:

The build still fails due to 3 compilation errors in `src/test/java/dumb/jaider/tools/DiffApplierTest.java`.
The error is consistently:
`incompatible types: com.github.difflib.patch.Patch<java.lang.String> cannot be converted to com.github.difflib.unifieddiff.UnifiedDiff`

This er